@@ -6,7 +6,7 @@ build_requires: {}
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300037, CPAN::Meta::Converter version 2.132140'
+generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.120921'
 license: lgpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,5 +16,5 @@ requires:
   Cairo::GObject: 1.000
   Carp: 0
   Exporter: 0
-  Glib::Object::Introspection: 0.015
-version: 0.011
+  Glib::Object::Introspection: 0.016
+version: 0.012
