@@ -1,5 +1,5 @@
 name    = Gtk3
-version = 0.011
+version = 0.012
 author  = Torsten Schoenfeld <kaffeetisch@gmx.de>
 license = LGPL_2_1
 copyright_holder = Torsten Schoenfeld
@@ -18,7 +18,7 @@ copyright_year = 2013
 Carp = 0 ; core
 Exporter = 0 ; core
 Cairo::GObject = 1.000
-Glib::Object::Introspection = 0.015
+Glib::Object::Introspection = 0.016
 
 [NextRelease]
 filename = NEWS
