@@ -1,3 +1,8 @@
+Overview of changes in Gtk3 0.012 [2013-09-30]
+==============================================
+
+* Add overrides for Gtk3::Image.
+
 Overview of changes in Gtk3 0.011 [2013-09-01]
 ==============================================
 
